# Dadi360-Rental-Job-Monitor

./: .gitignore  README.md  supabase_add_delete_policy.sql  supabase_migration_source.sql  supabase_schema.sql
dadi360/: LOGS_README.md  README.md  REFACTOR_README.md  USAGE_GUIDE.md  config.json  requirements.txt  view_logs.py
dadi360/src/: base_scraper.py  scheduler_util.py  scraper_launcher.py  simple_ui.py  web_monitor.py
dadi360/src/nail/: nail.py  nail_refactored.py  sent_nail_ids.json
dadi360/src/rental/: rental.py  rental_refactored.py  sent_listing_ids.json  sent_rental_ids.json
dadi360/src/restaurant/: restaurant.py  restaurant_refactored.py  sent_restaurant_ids.json
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: footer.tsx  globals.css  layout.tsx  nav.tsx  page.tsx  trend-chart.tsx
frontend/app/about/: page.tsx
frontend/lib/: price.ts  supabase.ts
scraper/: .env.example  .gitignore  config.json  pins_财务分析.md  pinterest_analysis.md  pinterest_risk_assessment.md  pyproject.toml  qorvo_risk_assessment.md  qrvo_analysis.md  write_analysis.py  write_report.py
scraper/qorvo_analysis/: qorvo_analysis.md  rf_semiconductor_analysis.md
scraper/reports/: b64_content.json  build_report.py  content.json  gen_full.py  googl_analysis.md  googl_analysis_full.md  googl_deep_dive.md  report_text.json
scraper/src/: main.py
scraper/src/db/: __init__.py  supabase.py
scraper/src/email/: __init__.py  sender.py
scraper/src/scrapers/: __init__.py  base.py  moonbbs.py  nail.py  rental.py  restaurant.py  us168.py  worker168.py
(+3 files in other folders)
